--- a/src/main/resources/templates/login old.html
+++ b/src/main/resources/templates/login old.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-<form name="loginForm" id="loginForm" th:action="@{/login/do-login-username}" th:object="${loginModel.loginVoUser}" method="post"  style="width:50%; margin:0 auto">
+<form name="loginForm" id="loginForm" th:action="@{/login/do-login} method="post"  style="width:50%; margin:0 auto">
 
     <h2 style="text-align:center; margin-bottom: 20px">用户登录</h2>
 
@@ -30,7 +30,7 @@
         <div class="row">
             <label class="form-label col-md-4">请输入用户名</label>
             <div class="col-md-5">
-                <input id="username" name = "username" th:value="*{username}" class="form-control" type="text" placeholder="用户名" required="true"  minlength="6" maxlength="20" />
+                <input id="username" name = "username" class="form-control" type="text" placeholder="用户名" required="true"  minlength="6" maxlength="20" />
             </div>
             <div class="col-md-1">
             </div>
@@ -41,7 +41,7 @@
         <div class="row">
             <label class="form-label col-md-4">请输入密码</label>
             <div class="col-md-5">
-                <input id="password" name="password" th:value="*{password}" class="form-control" type="password"  placeholder="密码" required="true" minlength="6" maxlength="16" />
+                <input id="password" name="password" class="form-control" type="password"  placeholder="密码" required="true" minlength="6" maxlength="16" />
             </div>
         </div>
     </div>
@@ -51,10 +51,48 @@
             <button class="btn btn-primary btn-block" type="reset" onclick="reset()">重置</button>
         </div>
         <div class="col-md-5">
-            <button class="btn btn-primary btn-block" type="submit">登录</button>
+            <button class="btn btn-primary btn-block" type="submit" onclick="login()">登录</button>
         </div>
     </div>
 
 </form>
 </body>
+<script>
+    function login(){
+        $("#loginForm").validate({
+            submitHandler:function(form){
+                doLogin();
+            }
+        });
+    }
+    function doLogin(){
+        g_showLoading();
+
+        var inputPass = $("#password").val();
+/*        var salt = g_passsword_salt;
+        var str = ""+salt.charAt(0)+salt.charAt(2) + inputPass +salt.charAt(5) + salt.charAt(4);
+        var password = md5(str);*/
+
+        $.ajax({
+            url: "/login/do_login",
+            type: "POST",
+            data:{
+                mobile:$("#username").val(),
+                password: inputPass
+            },
+            success:function(data){
+                layer.closeAll();
+                if(data.code == 0){
+                    layer.msg("成功");
+                    window.location.href="/goods/to_list";
+                }else{
+                    layer.msg(data.msg);
+                }
+            },
+            error:function(){
+                layer.closeAll();
+            }
+        });
+    }
+</script>
 </html>
